--- a/manifest.yml
+++ b/manifest.yml
@@ -3,7 +3,7 @@ applications:
   - name: pal-tracker
     path: build/libs/pal-tracker.jar
     routes:
-      - route: pal-tracker-ksh.apps.evans.pal.pivotal.io
+      - route: pal-tracker-phi.apps.evans.pal.pivotal.io
     env:
       WELCOME_MESSAGE: Hello from the review environment
       JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
